tests/NormalTests/paczka1/fuzzy1/93187689.err
Error in line 1: S574 A190 69,62
Error in line 6: Dfuh2i3 S574 62,3
Error in line 25: XyITnAYn4 A111 28,4
Error in line 29: 0DoWDmNA A111 88,3
Error in line 31: 0DoWDmNA S574 6,4
Error in line 33: 0DoWDmNA S430 98,3
Error in line 35: 0DoWDmNA A111 80,1
